FIND_PACKAGE( OpenCV REQUIRED )
find_package(PCL 1.7 REQUIRED)

INCLUDE_DIRECTORIES(${G2O_INCLUDE_DIR} ${EIGEN3_INCLUDE_DIR} ${CSPARSE_INCLUDE_DIR} ${PCL_INCLUDE_DIRS} )
LINK_LIBRARIES(${PCL_LIBRARY_DIRS})

# Build Library
# Graphic end

ADD_EXECUTABLE( exp1 exp1.cpp )
TARGET_LINK_LIBRARIES( exp1 SLAM3d )

